--- a/scss/layout/_visual.scss
+++ b/scss/layout/_visual.scss
@@ -22,6 +22,10 @@
             animation: clip-path-left-to-right 5s alternate forwards;
             animation-timeline: view();
             animation-range: entry 0% cover 20%;
+
+            @include for-iphone {
+                animation: unset;
+            }
         }
     }
 }
